--- a/privatenet/conf/vaddy.conf.example
+++ b/privatenet/conf/vaddy.conf.example
@@ -26,3 +26,7 @@ export VADDY_YOUR_LOCAL_PORT="8888"
 #Optional(CrawlId or Label)
 export VADDY_CRAWL=""
 
+#Optional(HTTPS proxy server for connecting VAddy WebAPI)
+# "your.local.proxy.server:port" 
+# ex. "127.0.0.1:8443" 
+export VADDY_HTTPS_PROXY=""
